unpackaged/main/default/objects/d_wh__Inbound_Call_Template__c/d_wh__Inbound_Call_Template__c.object-meta.xml
<CustomObject>
    <label>Inbound Call Template</label>
    <nameField>
        <label>Inbound Call Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inbound Call Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>