unpackaged/main/default/objects/d_wh__Inbound_Call_Template__c/fields/d_wh__Access_Type__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Access_Type__c</fullName>
    <label>Access Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
                <label>With Public URL</label>
            </value>
            <value>
                <fullName>Authenticated</fullName>
                <label>Authenticated with REST API</label>
            </value>
            <value>
                <fullName>SHA-256 Signed Body</fullName>
            </value>
            <value>
                <fullName>Bearer Token</fullName>
            </value>
            <value>
                <fullName>API Key</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
                <label>Basic (Username and Password)</label>
            </value>
            <value>
                <fullName>Apex</fullName>
                <label>Use Apex Class To Verify Authentication</label>
            </value>
            <value>
                <fullName>SHA-256 Signed URL + Body</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>