unpackaged/main/default/objects/d_wh__Inbound_Call_Template__c/fields/d_wh__Active__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>