unpackaged/main/default/objects/d_wh__Inbound_Call_Template__c/fields/d_wh__Failed_Authentication_Code__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Failed_Authentication_Code__c</fullName>
    <label>Failed Authentication Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>401</fullName>
                <label>401 Unauthorized</label>
            </value>
            <value>
                <fullName>403</fullName>
                <label>403 Forbidden</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>