unpackaged/main/default/objects/d_wh__Inbound_Call_Template__c/fields/d_wh__Identify_Object_By_Formula__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Identify_Object_By_Formula__c</fullName>
    <label>Identify Object By Formula</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>