unpackaged/main/default/objects/d_wh__Inbound_Call_Template__c/fields/d_wh__Identify_Object_By_JSON_Value__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Identify_Object_By_JSON_Value__c</fullName>
    <label>Identify Object By JSON Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>