unpackaged/main/default/objects/d_wh__Inbound_Call_Template__c/fields/d_wh__Identify_Object_By_URL_Param__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Identify_Object_By_URL_Param__c</fullName>
    <label>Identify Object By URL Param</label>
    <length>255</length>
    <type>Text</type>
</CustomField>