unpackaged/main/default/objects/d_wh__Inbound_Call_Template__c/fields/d_wh__Ignore_Criteria__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Ignore_Criteria__c</fullName>
    <label>Ignore Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>