unpackaged/main/default/objects/d_wh__Inbound_Call_Template__c/fields/d_wh__Webhook_Validation_Class__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Webhook_Validation_Class__c</fullName>
    <label>Webhook Validation Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>