unpackaged/main/default/objects/d_wh__Inbound_Call_Template__c/listViews/d_wh__All.listView-meta.xml
<ListView>
    <fullName>d_wh__All</fullName>
    <columns>NAME</columns>
    <columns>d_wh__Active__c</columns>
    <columns>d_wh__Object__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>